# solidity

./: Changelog.md
libsolc/: CMakeLists.txt
libsolidity/ast/: Types.cpp
libsolidity/codegen/: ExpressionCompiler.cpp
libsolidity/formal/: SMTChecker.h
libsolidity/interface/: StandardCompiler.cpp
scripts/: test_emscripten.sh
test/: CMakeLists.txt
test/libsolidity/: JSONCompiler.cpp  SolidityEndToEndTest.cpp  SolidityNameAndTypeResolution.cpp  StandardCompiler.cpp
